# validated-json

./: .gitignore  CMakeLists.txt  MyData.h  ValidatedJson.cpp  ValidatedJson.h  main.cpp  people.json
test/: CMakeLists.txt  test.cpp  test.json  unittest.sh
